# mp-test

./: .gitignore  CMakeLists.txt  README.md
boards/DEFAULT/: mpconfigboard.cmake
boards/campzone2019/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
boards/campzone2020/: board.json  board.md  mpconfigboard.cmake  mpconfigboard.h  sdkconfig.board
components/micropython/: CMakeLists.txt
main/: CMakeLists.txt
